# py-message-bus

./: .gitignore  .pre-commit-config.yaml  .wt-link  ANALYSIS_VISUAL_REFERENCE.md  OPTIMIZATION_SUMMARY.md  README.md  README_OPTIMIZATION_ANALYSIS.md  REDIS_OPTIMIZATION_ANALYSIS.md  coverage.json  pyproject.toml
.claude/: CLAUDE.md  linear.json  path-guard.json  review-prompts.yaml  settings.json
.claude/scripts/: claude-review.py  path-guard.py
.github/workflows/: ci.yml
benchmarks/: bench_async_redis.py  bench_batch_produce.py  bench_metadata_mode.py  benchmark_idempotency.py
src/message_bus/: __init__.py  async_redis_bus.py  dead_letter.py  latency.py  local.py  metrics.py  middleware.py  ports.py  recording.py  redis_bus.py  redis_dead_letter.py  retry.py  testing.py  timeout.py  zmq_bus.py
src/message_bus/lua/: ack_and_dedup.lua
tests/: conftest.py  test_async_local_bus.py  test_async_recording_bus.py  test_async_redis_bus.py  test_bench_harness.py  test_bus_compatibility.py  test_dead_letter.py  test_interface_segregation.py  test_latency.py  test_local_bus.py  test_message_metadata.py  test_metrics.py  test_middleware.py  test_recording_bus.py  test_recording_store.py  test_redis_bus.py  test_redis_dead_letter.py  test_retry.py  test_testing.py  test_timeout.py  test_zmq_bus.py
tests/contract/: __init__.py  messages.py  test_async_message_bus_contract.py  test_message_bus_contract.py
tests/e2e/: test_async_redis_e2e.py
tests/integration/: __init__.py  test_dead_letter_integration.py  test_middleware_integration.py  test_recording_integration.py
